// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid width 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Invalid value for flag --width: "nope". Expected a string representing a finite number (tui-stories 0.1.0)
~effect/cli/CliError/ShowHelp: Help requested
    at <anonymous> (<node_modules>/effect/dist/unstable/cli/Command.js:1077:34)
",
  "stdout": "DESCRIPTION
  Render a story to terminal output

USAGE
  tui-stories render [flags] <story-id>

ARGUMENTS
  story-id string    Story title or ID to render (supports prefix/substring match)

FLAGS
  --story, -s string     Named story export to render (defaults to first)
  --path string          Package directory to search for stories
  --width, -w integer    Terminal width for layout
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)
  --final                Apply all timeline events (show final state)
  --at integer           Apply timeline events up to this timestamp (ms)
  --arg, -a string       Override story arg (key=value format, repeatable)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > invalid width with json output (stdout guard) 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "DESCRIPTION
  Render a story to terminal output

USAGE
  tui-stories render [flags] <story-id>

ARGUMENTS
  story-id string    Story title or ID to render (supports prefix/substring match)

FLAGS
  --story, -s string     Named story export to render (defaults to first)
  --path string          Package directory to search for stories
  --width, -w integer    Terminal width for layout
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)
  --final                Apply all timeline events (show final state)
  --at integer           Apply timeline events up to this timestamp (ms)
  --arg, -a string       Override story arg (key=value format, repeatable)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

ERROR
  Invalid value for flag --width: "nope". Expected a string representing a finite number (tui-stories 0.1.0)
~effect/cli/CliError/ShowHelp: Help requested
    at <anonymous> (<node_modules>/effect/dist/unstable/cli/Command.js:1077:34)
",
  "stdout": "",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > list help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  List all discovered stories

USAGE
  tui-stories list [flags]

FLAGS
  --path string          Package directory to search for stories
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > missing path 1`] = `
{
  "signal": null,
  "status": 1,
  "stderr": "
ERROR
  Missing required flag: --path (tui-stories 0.1.0)
~effect/cli/CliError/ShowHelp: Help requested
    at <anonymous> (<node_modules>/effect/dist/unstable/cli/Command.js:1077:34)
",
  "stdout": "DESCRIPTION
  List all discovered stories

USAGE
  tui-stories list [flags]

FLAGS
  --path string          Package directory to search for stories
  --output, -o choice    Output mode: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson (choices: auto, tty, alt-screen, ci, ci-plain, log, json, ndjson)

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > root help 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "DESCRIPTION
  Headless TUI story runner — render Storybook stories in the terminal

USAGE
  tui-stories <subcommand> [flags]

GLOBAL FLAGS
  --help, -h                                                          Show help information
  --version, -v                                                       Show version information
  --wizard                                                            Start wizard mode for a command
  --completions <bash|zsh|fish|sh>                                    Print shell completion script (choices: bash, zsh, fish, sh)
  --log-level <all|trace|debug|info|warn|warning|error|fatal|none>    Sets the minimum log level (choices: all, trace, debug, info, warn, warning, error, fatal, none)

SUBCOMMANDS
  list       List all discovered stories
  render     Render a story to terminal output
  inspect    Inspect story metadata and available args
",
}
`;

exports[`tui-stories CLI contract baselines (status/signal invariant, prose owner-rebaselinable) > version 1`] = `
{
  "signal": null,
  "status": 0,
  "stderr": "",
  "stdout": "tui-stories v0.1.0
",
}
`;
